[feature]在项目中同时使用ContentProvider、ContentResolver

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnContentResolver"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="ContentResolverActivity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnUri" />
 </androidx.constraintlayout.widget.ConstraintLayout>
